--- a/training/linux.textile
+++ b/training/linux.textile
@@ -110,25 +110,6 @@ domain = gmail.com
 ** Advanced
 require ssl/tsl = checked
 
-h2. SQLDeveloper & Eclipse
-
-See "here":#ubuntuInstall for specific details.
-
-bc. 
-cd projects/myConfig/
-desktop-file-validate Eclipse.desktop
-desktop-file-validate SQLDeveloper.desktop 
-sudo desktop-file-install Eclipse.desktop
-sudo desktop-file-install SQLDeveloper.desktop
-
-Run SQLDeveloper once by hand to set the JDK path.
-
-/bin/sh /home/oracle/bin/sqldeveloper/sqldeveloper.sh
-
-set your jvm home to: /usr/lib/jvm/java-6-sun
-
-Now you should find the icons to launch the apps under: Applications > Programming.
-
 h2. Startup Programs
 
 System > Preferences > Startup Applications ... add
@@ -154,7 +135,7 @@ bc.
 ~/Downloads$ ./netbeans-6.9.1-ml-java-linux.sh 
 
 
-h2. Package Management
+h2. Package Management - Debian Systems
 
 h3. Package Details
 
@@ -194,6 +175,12 @@ h4. purge
 apt-get --purge remove <package>
 
 can also do: @dpkg --purge <package>@ then try re-install
+
+h2. Package Management - Redhat
+
+list package files:
+
+bc. rpm -ql
 
 h2. Setting up Lisp
 
@@ -265,6 +252,25 @@ sudo a2enmod ssl
 sudo nano /etc/apache2/sites-available/default-ssl # set DocumentRoot etc
 sudo a2ensite default-ssl
 sudo service apache2 restart
+
+h2. SQLDeveloper, Eclipse, IntelliJ
+
+See "here":#ubuntuInstall for specific details.
+
+bc. 
+cd projects/myConfig/
+desktop-file-validate Eclipse.desktop
+desktop-file-validate SQLDeveloper.desktop 
+sudo desktop-file-install Eclipse.desktop
+sudo desktop-file-install SQLDeveloper.desktop
+
+Run SQLDeveloper once by hand to set the JDK path.
+
+/bin/sh /home/oracle/bin/sqldeveloper/sqldeveloper.sh
+
+set your jvm home to: /usr/lib/jvm/java-6-sun
+
+Now you should find the icons to launch the apps under: Applications > Programming.
 
 h2(#ubuntuInstall). Installing Programs
 
@@ -375,6 +381,33 @@ bc. ln -s <existing_file> <new_link_name>
 h3. Date / Time
 
 bc. hwclock --set --date='08/18/07 14:40:40' --localtime
+
+h3. CPU info, Distro info
+
+h4. Distro Info 
+
+rpm variants: 
+
+bc. cat /etc/*release
+
+ubunut
+
+bc. 
+cat /etc/debian_version
+cat /etc/lsb-release
+
+other
+
+bc. 
+cat /etc/*version
+
+h4. CPU Info
+
+bc. 
+cat /proc/cpuinfo
+
+ref: "http://www.brunolinux.com/05-Configuring_Your_System/CPU_Info.html":http://www.brunolinux.com/05-Configuring_Your_System/CPU_Info.html
+
 
 h2(#nfs). NFS
 
