--- a/index.textile
+++ b/index.textile
@@ -5,6 +5,7 @@ p(toc). Navigation
 Quick Links:
 
 !(icon)/images/file.gif! "Applications":/jeos/applications.html
+!(icon)/images/file.gif! "Building Software":/training/buildingSoftware.html
 !(icon)/images/file.gif! "Clojure":/training/clojure.html
 !(icon)/images/file.gif! "DB 11g":/jeos/db11g/db11g.html
 !(icon)/images/file.gif! "Emacs":training/emacs.html
