--- a/index.textile
+++ b/index.textile
@@ -20,7 +20,9 @@ Quick Links:
 !(icon)/images/file.gif! "Maven":/maven.html
 !(icon)/images/file.gif! "OVM Manager & Template Builder":/jeos/OVM_Manager_TemplateBuilder.html
 !(icon)/images/file.gif! "Oracle VM Commands":/training/oracleVM.html
-!(icon)/images/file.gif! "Setting up an Oracle Virtual Machine Lab":jeos/SettingUpVirtualLab.html
+!(icon)/images/file.gif! "Setting up an Oracle Virtual Machine
+!Lab":jeos/SettingUpVirtualLab.html
+!(icon)/images/file.gif! "Skills Criteria":/skillsCriteria.html
 !(icon)/images/file.gif! "SSH":/secure.html
 !(icon)/images/file.gif! "Textile":training/textile.html
 !(icon)/images/file.gif! "Virtual Machines Labs":jeos/virtualMachines.html
