--- a/training/java/java.textile
+++ b/training/java/java.textile
@@ -33,6 +33,16 @@ String filename = "application.properties";
 File file = new File(filename);
 properties.load(new FileInputStream(file));
 
+h2. Load from classpath
+
+Load an arbitrary file from the classpath.  I.e. it gets compiled into
+the jar...so not good for settings that will only be changed after
+deployment.  Drop @myfile.txt@ in the root of your classpath...or
+elsewhere (but then put a path in front such as:
+@/com/oracle/myfile.txt@. 
+
+bc. InputStream stream = this.getClass().getClassLoader().getResourceAsStream("myfile.txt");
+
 h2. The Best Way
 
 The following loads a properties file (not resource file) from the root of the classpath....without it needing to be compiled into the jar.
