--- a/jeos/applications.textile
+++ b/jeos/applications.textile
@@ -183,6 +183,8 @@ As root:
 
 bc. yum -y install python-setuptools
 
+h2. Setup RPMForge
+
 p(#rpmforge). 
 
 * On your laptop download: 
@@ -197,11 +199,12 @@ and do:
 
 bc. rpm -ivh rpmforge-release-0.3.6-1.el5.rf.i386.rpm
 
-* Install GIT
+
+h2. Install GIT
 
 bc. yum -y install git
 
-* Install Gitosis
+h2. Install Gitosis
 
 on laptop download: 
 
