--- a/index.textile
+++ b/index.textile
@@ -12,6 +12,7 @@ Quick Links:
 !(icon)/images/file.gif! "GIT":training/git.html
 !(icon)/images/file.gif! "Groovy & Gradle":training/java/groovy.html
 !(icon)/images/file.gif! "Java":training/java/java.html
+!(icon)/images/file.gif! "JSF":/training/jersey.html
 !(icon)/images/file.gif! "JSF":/jsf.html
 !(icon)/images/file.gif! "Latex":training/latex.html
 !(icon)/images/file.gif! "Linux":training/linux.html
