--- a/training/jersey.textile
+++ b/training/jersey.textile
@@ -161,3 +161,37 @@ public String getGreeting(
 test:
 
 bc. curl -i "http://localhost:8080/crmodRestServer/greeting?name1=Fenton&name2=Travers"
+
+
+h1. Using Netbeans
+
+Since it is desireable to be able to debug the web services, it's
+helpful if we can run the REST server inside the IDE.
+
+bc. 
+mvn -DarchetypeVersion=1.0.2 -Darchetype.interactive=false -DgroupId=com.oracle.git.ngsp -DarchetypeArtifactId=webapp-javaee6 -Dversion=1.0-SNAPSHOT -DarchetypeGroupId=org.codehaus.mojo.archetypes -Dbasedir=/home/oracle/projects -Dpackage=com.oracle.git.ngsp -DartifactId=crmodRestServer4 -Dnetbeans.execution=true --batch-mode org.apache.maven.plugins:maven-archetype-plugin:2.0-alpha-4:generate
+
+* Right-click project > Set as Main Project
+
+* Open project in Netbeans. Right click project > Properties > Run >
+Select Glassfish.
+
+* Create your rest web service class:
+
+Right-click on project > New > Category: Web Services, File Types:
+RESTful Web Services from Patterns > Simple Root Resource > put in
+your desired values 
+
+# I chose my path: Autosr
+# Output: text/plain
+
+> Radio button select: "Create default REST servlet
+adaptor in web.xml" > OK
+
+* Update the method annotated with @GET to have a one-liner:
+
+bc. return "Hello World.";
+
+* Launch the Server
+
+Debug Main Project: Ctrl-F5
