--- a/training/git.textile
+++ b/training/git.textile
@@ -305,7 +305,9 @@ h2. Compare Two Files
 Then you might wonder what is the difference between a file that exists in two different
 branches.
 
-bc. git diff <branchA> <branchB> -- <file>
+bc. 
+git diff <branchA> <branchB> -- <file>
+git diff <commit> <commit> -- <file>
 
 h2. Bring down remote changes
 
