--- a/maven.textile
+++ b/maven.textile
@@ -326,7 +326,7 @@ h3(#createproject). Generic
 
 Simple Java project, suitable for JAR generation. Maven 2 default.
 
-bc. mvn archetype:generate -B -DarchetypeGroupId=org.apache.maven.archetypes -DarchetypeArtifactId=maven-archetype-quickstart -DarchetypeVersion=1.0 -DgroupId=com.oracle.git.ngsp -DartifactId=ossoCrmodTester -Dversion=1.0 -Dpackage=com.oracle.git.ngsp
+bc. mvn archetype:generate -B -DarchetypeGroupId=org.apache.maven.archetypes -DarchetypeArtifactId=maven-archetype-quickstart -DarchetypeVersion=1.0 -Dversion=1.0 -DgroupId=com.oracle.git.ngsp -DartifactId=ossoCrmodTester -Dpackage=com.oracle.git.ngsp
 
 || Parameter || Meaning                                                ||
 | package    | This is the java package the classes will be created in |
